# dih

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  env.config.yaml  pyproject.toml  run.py  secrets.yaml  setup.py  tox.ini
.docker/: Dockerfile  docker-compose.yaml  requirements.txt
.github/workflows/: ci.yml
custom_logger/: __init__.py  config.yaml  delta_handler.py  json_formatter.py  test.py
data/lake/raw/customers/: customers.json
data/lake/raw/orders/: batch1.csv  batch2.csv
data/lake/raw/products/: products.csv
examples/: README.md  __init__.py
examples/pipelines/: __init__.py
examples/pipelines/customers/: __init__.py  bronze_table_customers_def.py  landed_table_customers_def.py  landed_to_bronze_customers_pipeline.py
examples/pipelines/orders/: README.md  __init__.py  bronze.py  bronze_table_orders_def_transactions.py  config.py  gold.py  landed_table_orders_def_transactions.py  landed_to_bronze_orders_pipeline_transactions.py  run.py  silver.py  table_definitions.py
examples/pipelines/orders_old/: gold.py  silver.py  table_definitions.py
examples/pipelines/products/: __init__.py  bronze_table_products_def.py  landed_table_products_def.py  landed_to_bronze_products_pipeline.py
loadcore/: __init__.py  config.py  environment.py  secrets.py  spark_manager.py
loadcore/src/: constructor.py
loadcore/src/configs/: config_builder.py
loadcore/src/handlers/: error_exceptions.py  helpers.py
loadcore/src/readers/: yaml_reader.py
loadcore/src/readers/constructors/: secret_constructor.py
loadcore/system/configs/: local.config.yaml  secrets.config.yaml
pipelines/bronze/definitions/: bronze_products_def.py
pipelines/bronze/pipelines/: bronze_products_pipeline.py
pipelines/bronze/schemas/: bronze_products_schema.py
pipelines/landed/definitions/: landed_products_def.py
pipelines/landed/schemas/: landed_products_schema.py
src/: __init__.py
src/core/: __init__.py  pipeline.py  reader_registry.py  result.py  runner.py  table_interfaces.py  writer_registry.py
src/dih/: __init__.py  constants.py
src/dih/core/: __init__.py  config.py  interfaces.py  pipeline.py  reader_registry.py  runner.py  table_interfaces.py  transformation.py  writer_registry.py
src/dih/delta/: __init__.py
src/dih/delta/writers/: __init__.py  base.py  merge.py  merge_auto_partition.py  utils.py
src/dih/io/: __init__.py  spark_reader.py  spark_writer.py
src/dih/readers/: auto_loader_reader.py  base_spark_reader.py  catalog_table_reader.py  delta_table_reader.py
src/dih/transforms/: __init__.py
src/dih/utils/: __init__.py  loader.py  paths.py
src/dih/writers/: __init__.py  base_spark_writer.py  delta_merge_auto_partition.py  delta_merge_writer.py  delta_writer_base.py  utils.py
src/readers/: auto_loader_reader.py  base_spark_reader.py  catalog_table_reader.py  delta_table_reader.py
src/transforms/: __init__.py  apply_schema.py
src/utils/: loader.py
src/writers/: base_spark_writer.py  delta_merge_auto_partition.py  delta_merge_writer.py  delta_writer_base.py  utils.py
tests/: __init__.py  conftest.py
tests/test_core/: __init__.py  test_interfaces.py  test_result.py  test_transformation.py
tests/test_io/: __init__.py  test_spark_io.py
